--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ azurestorage.queues.transactionclosepayment.name=${TRANSACTIONS_CLOSE_PAYMENT_QU
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotificationretry.name=${TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotification.name=${TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME}
+azurestorage.queues.transactionauthorizationrequested.name=${TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME}
 azurestorage.transient.connectionstring=${QUEUE_TRANSIENT_CONNECTION_STRING}
 azurestorage.queues.deadletter.name=${TRANSACTIONS_DEAD_LETTER_QUEUE_NAME}
 azurestorage.deadletter.connectionstring=${QUEUE_DEADLETTER_CONNECTION_STRING}
@@ -47,6 +48,10 @@ closePaymentRetry.eventOffsetSeconds=${CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_S
 closePaymentRetry.maxAttempts=${CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS}
 closePaymentRetry.paymentTokenValidityTimeOffset=${CLOSE_PAYMENT_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
 
+transactionAuthorizationRequested.eventOffsetSeconds=${AUTHORIZATION_REQUESTED_RETRY_EVENT_BASE_INTERVAL_SECONDS}
+transactionAuthorizationRequested.maxAttempts=${AUTHORIZATION_REQUESTED_RETRY_EVENT_MAX_ATTEMPTS}
+transactionAuthorizationRequested.paymentTokenValidityTimeOffset=${AUTHORIZATION_REQUESTED_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
+
 notificationRetry.eventOffsetSeconds=${NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 notificationRetry.maxAttempts=${NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS}
 
@@ -54,6 +59,11 @@ notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
 notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
 notificationsService.connectionTimeout=${NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT}
 notificationsService.apiKey=${NOTIFICATIONS_SERVICE_API_KEY}
+
+transactionsService.uri=${TRANSACTIONS_SERVICE_URI}
+transactionsService.readTimeout=${TRANSACTIONS_SERVICE_READ_TIMEOUT}
+transactionsService.connectionTimeout=${TRANSACTIONS_SERVICE_CONNECTION_TIMEOUT}
+transactionsService.apiKey=${TRANSACTIONS_SERVICE_API_KEY}
 
 confidentialDataManager.personalDataVault.apiKey=${PERSONAL_DATA_VAULT_API_KEY}
 confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_BASE_PATH}
