--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -120,6 +120,7 @@ microservice-chart:
     SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
     OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-event-dispatcher-service,service.deployment.environment=dev"
     OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.elastic-system.svc:4317"
+    OTEL_EXPORTER_OTLP_PROTOCOL: grpc
     OTEL_TRACES_EXPORTER: otlp
     OTEL_METRICS_EXPORTER: otlp
     OTEL_LOGS_EXPORTER: none
