--- a/pom.xml
+++ b/pom.xml
@@ -160,9 +160,9 @@
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>io.swagger</groupId>
+			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
-			<version>1.6.6</version>
+			<version>2.2.19</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
@@ -355,10 +355,10 @@
 						</goals>
 						<configuration>
 							<inputSpec>
-								https://raw.githubusercontent.com/pagopa/pagopa-infra/51569d014c17d0808d8e08be11d05b32f83bf8a6/src/core/api/nodopagamenti_api/nodoPerPM/v2/_swagger.json.tpl
+								https://raw.githubusercontent.com/pagopa/pagopa-infra/main/src/core/api/nodopagamenti_api/nodoPerPM/v2/_openapi.json.tpl
 							</inputSpec>
-							<generatorName>java</generatorName>
-							<library>webclient</library>
+							<generatorName>spring</generatorName>
+							<library>spring-cloud</library>
 							<generateApiDocumentation>false</generateApiDocumentation>
 							<generateApiTests>false</generateApiTests>
 							<generateModelTests>false</generateModelTests>
@@ -366,6 +366,9 @@
 							<modelPackage>it.pagopa.generated.ecommerce.nodo.v2.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.ecommerce.nodo.v2.api</apiPackage>
 							<modelNameSuffix>dto</modelNameSuffix>
+							<configOptions>
+								<interfaceOnly>true</interfaceOnly>
+							</configOptions>
 						</configuration>
 					</execution>
 					<execution>
