--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -120,10 +120,10 @@ microservice-chart:
     MONGO_MIN_POOL_SIZE: "0"
     MONGO_MAX_POOL_SIZE: "50"
     MONGO_MAX_IDLE_TIMEOUT_MS: "600000"
-    MONGO_CONNECTION_TIMEOUT_MS: "2000"
+    MONGO_CONNECTION_TIMEOUT_MS: "5000"
     MONGO_SOCKET_TIMEOUT_MS: "10000"
-    MONGO_SERVER_SELECTION_TIMEOUT_MS: "2000"
-    MONGO_WAITING_QUEUE_MS: "2000"
+    MONGO_SERVER_SELECTION_TIMEOUT_MS: "30000"
+    MONGO_WAITING_QUEUE_MS: "30000" # must be greater than or equal to server selection timeout
     MONGO_HEARTBEAT_FREQUENCY_MS: "5000"
     REDIS_HOST: pagopa-p-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
