--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,10 @@ REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY=event-dispatcher-commands
 REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX=event-dispatcher-consumer-group
 REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX=event-dispatcher-consumer-name
 EVENT_CONTROLLER_STATUS_POLLING_CHRON=*/10 * * * * *
+
+REDIRECT_PAYMENT_TYPE_CODES=RPIC,RABC
+NODE_FORWARDER_API_KEY=node-forwarder-api-key
+NODE_FORWARDER_URL=http://localhost:8096
+REDIRECT_URL_MAPPING={RPIC:'http://localhost:8096',RABC:'http://localhost:8096'}
+NODE_FORWARDER_READ_TIMEOUT=10000
+NODE_FORWARDER_CONNECTION_TIMEOUT=10000
