--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -155,7 +155,7 @@ microservice-chart:
     NPG_API_KEY: npg-api-key
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
     NODE_FORWARDER_API_KEY: node-forwarder-api-key
-    REDIRECT_URL_MAPPING: redirect-url-mapping
+    REDIRECT_URL_MAPPING: redirect-refund-mapping
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
