--- a/pom.xml
+++ b/pom.xml
@@ -590,6 +590,8 @@
 					<connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
 					<scmVersionType>tag</scmVersionType>
 					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+					<scmVersionType>branch</scmVersionType>
+					<scmVersion>CHK-2736-wallet-details</scmVersion>
 					<goals>install -DskipTests</goals>
 				</configuration>
 				<executions>
