--- a/pom.xml
+++ b/pom.xml
@@ -591,7 +591,7 @@
 					<scmVersionType>tag</scmVersionType>
 					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
 					<scmVersionType>branch</scmVersionType>
-					<scmVersion>CHK-2736-wallet-details</scmVersion>
+					<scmVersion>main</scmVersion>
 					<goals>install -DskipTests</goals>
 				</configuration>
 				<executions>
