--- a/.env.example
+++ b/.env.example
@@ -65,8 +65,6 @@ NPG_CARDS_PSP_LIST=CIPBITMM,BNLIITRR,BCITITMM,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX
 NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key","BCITITMM":"BCITITMM-api-key","UNCRITMM":"UNCRITMM-api-key","BPPIITRRXXX":"BPPIITRRXXX-api-key","PPAYITR1XXX":"PPAYITR1XXX-api-key"}EY
 
 REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY=event-dispatcher-commands
-REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX=event-dispatcher-consumer-group
-REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX=event-dispatcher-consumer-name
 EVENT_CONTROLLER_STATUS_POLLING_CHRON=*/10 * * * * *
 
 REDIRECT_PAYMENT_TYPE_CODES=REDIRECT-RBPR
@@ -96,3 +94,11 @@ OTEL_TRACES_EXPORTER=none
 OTEL_METRICS_EXPORTER=none
 OTEL_LOGS_EXPORTER=none
 OTEL_TRACES_SAMPLER=always_off
+
+AUTHORIZATION_OUTCOME_WAITING_EVENT_BASE_INTERVAL_SECONDS=10
+AUTHORIZATION_OUTCOME_WAITING_EVENT_MAX_ATTEMPTS=3
+AUTHORIZATION_OUTCOME_WAITING_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET_SECONDS=10
+TRANSACTIONS_SERVICE_API_KEY=api-key
+TRANSACTIONS_SERVICE_URI="http://pagopa-ecommerce-transactions-service:8080/"
+TRANSACTIONS_SERVICE_READ_TIMEOUT=10000
+TRANSACTIONS_SERVICE_CONNECTION_TIMEOUT=10000
