--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -133,11 +133,11 @@ stages:
                 - template: azure-templates/helm-microservice-chart-deploy.yml
                   parameters:
                     DO_DEPLOY: true
-                    DO_BLUE_GREEN_DEPLOY: true
+                    DO_BLUE_GREEN_DEPLOY: false
                     ENV: 'DEV'
                     KUBERNETES_SERVICE_CONN: $(DEV_KUBERNETES_SERVICE_CONN)
                     NAMESPACE: ecommerce
-                    APP_NAME: beta-$(K8S_IMAGE_REPOSITORY_NAME)
+                    APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-dev.yaml"
                     GREEN_VERSION: $(Build.SourceVersion)
                     BLUE_VERSION: $(Build.SourceVersion)
@@ -306,15 +306,6 @@ stages:
           runOnce:
             deploy:
               steps:
-                # uninstall helm release used for blue instance
-                - task: HelmDeploy@0
-                  displayName: Un-install UAT blue version
-                  continueOnError: true
-                  inputs:
-                    kubernetesServiceEndpoint: $(UAT_KUBERNETES_SERVICE_CONN)
-                    namespace: "ecommerce"
-                    command: uninstall
-                    arguments: beta-$(K8S_IMAGE_REPOSITORY_NAME)
                 - checkout: self
                   displayName: "Checkout"
                   # without the below checkout git head is set on the commit before release version bump
