--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -16,7 +16,7 @@ spring.cloud.azure.storage.queue.endpoint=http://127.0.0.1:10001/devstoreaccount
 nodo.uri=https://localhost/nodo
 nodo.readTimeout=10000
 nodo.connectionTimeout=10000
-nodo.closepayment.apikey=key
+nodo.nodeforpm.apikey=key
 nodo.ecommerce.clientId=key
 spring.redis.host=redis
 spring.redis.password=redis
